# bytearray

./: CMakeLists.txt  bytearray.cpp
include/: bytearray.hpp
src/: base_bytearray.cpp  base_bytearray.h
