cmake_minimum_required(VERSION 3.16)

project(bytearray LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file (GLOB_RECURSE SOURCES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
                            ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)


add_library(${PROJECT_NAME} STATIC ${SOURCES})
add_library(lib::bytearray ALIAS ${PROJECT_NAME})

set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>)
target_include_directories(${PROJECT_NAME}
   PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>"
   "$<INSTALL_INTERFACE:include/>"
)

include(GNUInstallDirs)
install(TARGETS ${PROJECT_NAME}   
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)